--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -4,14 +4,112 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-}
 
-.large-hero__text-content {
-    color: #fff;
+    &__text-content {
+    color: $white;
     text-transform: uppercase;
 
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
     margin-bottom: 40px;
+    }
+
+    &__title {
+    display: block;
+    font-size: 40px;
+    font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, sans-serif;
+    font-weight: 300;
+    letter-spacing: 18.2px;
+    text-shadow: 4px 3px 0 rgba(0,0,0,.1);
+    animation: moveInLeft .8s ease-out 1s;
+    animation-fill-mode: backwards;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+    margin-bottom: 15px;
+    /*
+    animation-delay: 3s;
+    animation-iteration-count: 3;
+    */
+    }
+
+    &__subtitle {
+    display: block;
+    font-size: 25px;
+    font-weight: 600;
+    letter-spacing: 11.2px;
+    text-shadow: 4px 3px 0 rgba(0,0,0,.1);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    animation: moveInRight .8s ease-out 1s;
+    animation-fill-mode: backwards;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+    }
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(-100px);
+        -moz-transform: translateX(-100px);
+        -ms-transform: translateX(-100px);
+        -o-transform: translateX(-100px);
+        transform: translateX(-100px);
+    }
+
+    /*80%{
+        transform: translateX(5px);
+    }*/
+
+    100% {
+        opacity: 1;
+        -webkit-transform: translate(0);
+        -moz-transform: translate(0);
+        -ms-transform: translate(0);
+        -o-transform: translate(0);
+        transform: translate(0);
+    }
+}
+
+@keyframes moveInRight {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(100px);
+        -moz-transform: translateX(100px);
+        -ms-transform: translateX(100px);
+        -o-transform: translateX(100px);
+        transform: translateX(100px);    }
+    /*
+        80%{
+            transform: translateX(-5px);
+        }*/
+
+    100% {
+        opacity: 1;
+        -webkit-transform: translate(0);
+        -moz-transform: translate(0);
+        -ms-transform: translate(0);
+        -o-transform: translate(0);
+        transform: translate(0);    }
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(30px);
+        -moz-transform: translateY(30px);
+        -ms-transform: translateY(30px);
+        -o-transform: translateY(30px);
+        transform: translateY(30px);    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: translate(0);
+        -moz-transform: translate(0);
+        -ms-transform: translate(0);
+        -o-transform: translate(0);
+        transform: translate(0);    }
 }
