--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -93,7 +93,6 @@ body {
     border: 1px solid #4786ff;
     border-radius: 50px;
 }
-
 .header {
     height: 91vh;
     background-image: linear-gradient(
@@ -101,7 +100,7 @@ body {
             rgba(65, 204, 210, 0.5),
             rgba(71, 134, 255, 0.5),
             rgba(103, 95, 242, 0.5)),
-    url(../../img/hero-compressor.jpg);
+    url(../../assets/images/hero-compressor.jpg);
     background-size: cover;
     background-position: top;
 
